--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ h1,h2,h3,.tit{font-family: 'LOTTERIADDAG';}
 				<div class="window_inwrap2">
 					<img class="window_inwrap2_img" src="./loding.gif">
 					<ul>
-						<li></li>
-						<li></li>
-						<li></li>
+						<li class="li1"></li>
+						<li class="li2"></li>
+						<li class="li3"></li>
 					</ul>
 				</div>
 			</div>
