--- a/sub_02.html
+++ b/sub_02.html
@@ -100,7 +100,7 @@ h1,h2,h3,.tit{font-family: 'LOTTERIADDAG';}
 						<img class="wbtn3" src="./btn_03.jpg">
 					</button>
 				</div>
-				<div class="side_button_04">
+				<div class="side_button_03">
 					<button>
 						<img class="up1" src="./up.png">
 					</button>
@@ -118,6 +118,40 @@ h1,h2,h3,.tit{font-family: 'LOTTERIADDAG';}
 							<b><img src="./원.jpg">  작업내용</b><br>서브페이지 디자인<br><br>
 							<b><img src="./원.jpg">  주소</b><br><a href="http://beldad.co.kr/new2016/mn05/mn05_02.html?lv=5&lv2=32" target="_blank">http://beldad.co.kr/new2016/mn05/mn05_02.html?lv=5&lv2=32</a><br><br>
 							<b><img src="./원.jpg">  PDF</b><br><a href="./04.pdf" target="_blank">pdf 보러가기</a><br><br>
+
+						</p>
+					</div>
+					
+				</div>
+			</div>
+			
+		</div>
+
+		<div class="sub_01">
+			<div class="window_wrap_02">
+				<div class="window_button2">
+					<button>
+						<img class="wbtn3" src="./btn_03.jpg">
+					</button>
+				</div>
+				<div class="side_button_04">
+					<button>
+						<img class="up1" src="./up.png">
+					</button>
+					<button>
+						<img class="down1" src="./down.png">
+					</button>
+				</div>
+			
+				<div class="window_inwrap3">
+					<img class="window_inwrap3_img" src="./포트폴리오_이미지_17.png">
+					<div>
+						<h3>다올린</h3>
+						<p><b><img src="./원.jpg">  클라이언트</b><br>다올린<br><br>
+							<b><img src="./원.jpg">  작업툴</b><br>포토샵, 일러스트레이터<br><br>
+							<b><img src="./원.jpg">  작업내용</b><br>서브페이지 디자인<br><br>
+							<b><img src="./원.jpg">  주소</b><br><a href="http://daolin.co.kr/sub/sub08/sub08_08.php" target="_blank">http://daolin.co.kr/sub/sub08/sub08_08.php</a><br><br>
+							<b><img src="./원.jpg">  PDF</b><br><a href="./17.pdf" target="_blank">pdf 보러가기</a><br><br>
 
 						</p>
 					</div>
