--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@ h1,h2,h3,.tit{font-family: 'LOTTERIADDAG';}
 						
 							<b><img src="./원.jpg">  2022. 05 - 2023. 06</b><br>의료뷰티 계열 웹 디자이너, UI/UX 디자이너  |  조인스엠<br><br>
 							<b><img src="./원.jpg">  2022. 12</b><br>우수사원 수상  |  조인스엠
+							<br><br>
+							<b><img src="./원.jpg">  2023. 09 (기준)</b><br>개인유튜브 운영  |  구독자 4800명
 
 						</p>
 					</div>
@@ -216,25 +218,25 @@ h1,h2,h3,.tit{font-family: 'LOTTERIADDAG';}
 							
 						<a href="./sub_03.html" target="_blank">
 							<div class="por1">
-								<b><div>어플광고 디자인</div></b>
+								<b><div>상세페이지</div></b>
 							</div>
 						</a>
 
 						<a href="./sub_04.html" target="_blank">
 							<div class="por1">
-								<b><div>마케팅광고<br>디자인</div></b>
+								<b><div>마케팅 디자인</div></b>
 							</div>
 						</a>
 
 						<a href="./sub_05.html" target="_blank">
 							<div class="por1">
-								<b><div>인쇄물</div></b>
+								<b><div>인쇄물/키오스크</div></b>
 							</div>
 						</a>
 
 						<a href="./sub_06.html" target="_blank">
 							<div class="por1">
-								<b><div>이벤트</div></b>
+								<b><div>이벤트 프로모션</div></b>
 							</div>
 						</a>
 
