--- a/sub_06.html
+++ b/sub_06.html
@@ -44,11 +44,77 @@ h1,h2,h3,.tit{font-family: 'LOTTERIADDAG';}
 				<div class="window_inwrap3">
 					<img class="window_inwrap3_img" src="./port_12.png">
 					<div>
-						<h3>조인스엠 담당업체 이벤트</h3>
-						<p><b><img src="./원.jpg">  클라이언트</b><br>조인스엠 담당업체 이벤트 <br><br>
+						<h3>이벤트 페이지</h3>
+						<p><b><img src="./원.jpg">  클라이언트</b><br>담당 업체 클라이언트<br><br>
 							<b><img src="./원.jpg">  작업툴</b><br>포토샵, 일러스트레이터<br><br>
-							<b><img src="./원.jpg">  작업내용</b><br>이벤트 디자인<br><br>
-							<b><img src="./원.jpg">  PDF</b><br><a href="./11.pdf" target="_blank">pdf 보러가기</a><br><br>
+							<b><img src="./원.jpg">  작업내용</b><br>이벤트 페이지 디자인<br><br>
+							<b><img src="./원.jpg">  PDF</b><br><a href="./27.pdf" target="_blank">pdf 보러가기</a><br><br>
+
+						</p>
+					</div>
+					
+				</div>
+			</div>
+			
+		</div>
+
+		<div class="sub_01">
+			<div class="window_wrap_02">
+				<div class="window_button2">
+					<button>
+						<img class="wbtn3" src="./btn_03.jpg">
+					</button>
+				</div>
+				<div class="side_button_02">
+					<button>
+						<img class="up1" src="./up.png">
+					</button>
+					<button>
+						<img class="down1" src="./down.png">
+					</button>
+				</div>
+			
+				<div class="window_inwrap3">
+					<img class="window_inwrap3_img" src="./포트폴리오_이미지_28.png">
+					<div>
+						<h3>팝업 디자인</h3>
+						<p><b><img src="./원.jpg">  클라이언트</b><br>담당 업체 클라이언트<br><br>
+							<b><img src="./원.jpg">  작업툴</b><br>포토샵, 일러스트레이터<br><br>
+							<b><img src="./원.jpg">  작업내용</b><br>팝업 디자인<br><br>
+							<b><img src="./원.jpg">  PDF</b><br><a href="./28.pdf" target="_blank">pdf 보러가기</a><br><br>
+
+						</p>
+					</div>
+					
+				</div>
+			</div>
+			
+		</div>
+
+		<div class="sub_01">
+			<div class="window_wrap_02">
+				<div class="window_button2">
+					<button>
+						<img class="wbtn3" src="./btn_03.jpg">
+					</button>
+				</div>
+				<div class="side_button_02">
+					<button>
+						<img class="up1" src="./up.png">
+					</button>
+					<button>
+						<img class="down1" src="./down.png">
+					</button>
+				</div>
+			
+				<div class="window_inwrap3">
+					<img class="window_inwrap3_img" src="./포트폴리오_이미지_29.png">
+					<div>
+						<h3>배너 디자인</h3>
+						<p><b><img src="./원.jpg">  클라이언트</b><br>담당 업체 클라이언트<br><br>
+							<b><img src="./원.jpg">  작업툴</b><br>포토샵, 일러스트레이터<br><br>
+							<b><img src="./원.jpg">  작업내용</b><br>배너 디자인<br><br>
+							<b><img src="./원.jpg">  PDF</b><br><a href="./29.pdf" target="_blank">pdf 보러가기</a><br><br>
 
 						</p>
 					</div>
